# ghovax.github.io

./: .env.example  .gitignore  Makefile  README.md  about-me.md  blog_posts.py  config.py  contact-info.md  convert_posts.sh  package-lock.json  package.json  posts.json  publish_blog.py  pyproject.toml  watch.py
.github/workflows/: static.yml
app/: globals.css  layout.tsx  page.tsx
components/: BlogHeader.tsx  PostCard.tsx  about-section.tsx  blog-header.tsx  marquee.tsx  post-card.tsx  post-content.tsx  post-title.tsx
components/post-components/: ExampleChart.tsx  example-chart.tsx  index.tsx
components/ui/: highlighter.tsx
lib/: document.css  posts-timestamp.ts
posts/: README.md  sample-post.md
posts/anki-levels-extension/: index.md
posts/bequire-full-stack/: index.md
posts/desktop-mascots-macos/: index.md
posts/dft-helium-julia/: Important_story.html  dft_HeReport.html  index.md
posts/game-engine-server/: index.md
posts/lattice-plot-mathematica/: index.md
posts/markdown/: getting-started.md  welcome.md
posts/math-library-haskell/: index.md
posts/mnist-arduino/: index.md
posts/pdf-generation-library/: index.md
posts/sample-post-second/: index.md
posts/tobii-reverse-engineering/: index.md
public/.posts-build/: anki-levels-extension.html  bequire-full-stack.html  desktop-mascots-macos.html  dft-helium-julia.html  game-engine-server.html  lattice-plot-mathematica.html  math-library-haskell.html  mnist-arduino.html  pdf-generation-library.html  (+1 more)
scripts/: convert-posts.js
templates/: base_blog.html  blog.html
types/: post.ts
(+23 files in other folders)
